test/Fail/Cubical-without-glue-Import/Without-glue.agda
{-# OPTIONS --cubical=no-glue #-}

module Cubical-without-glue-Import.Without-glue where
